Ensure inline form fields align properly with or without error messages (#2196)

--- a/src/sass/objects/_forms.layout.scss
+++ b/src/sass/objects/_forms.layout.scss
@@ -116,6 +116,7 @@
 
 		.#{$ns}-field-layout {
 			display: inline-block;
+			vertical-align: top;
 		}
 	}
 }
